--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -60,9 +60,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scripts\BallMovement.cs" />
+    <Compile Include="Assets\Scripts\ButtonBehaviour.cs" />
     <Compile Include="Assets\Scripts\GameController.cs" />
-    <Compile Include="Assets\Scripts\Offset.cs" />
+    <Compile Include="Assets\Scripts\PlayerBehaviour.cs" />
+    <Compile Include="Assets\Scripts\TextureOffset.cs" />
     <Reference Include="Unity.Timeline.Editor">
       <HintPath>C:/Users/ERIC-PC/Desktop/Infinity/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
     </Reference>
